index Landing page

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 2%;
+    margin-top: 2.2%;
     margin-left: 10vh;
     margin-right: 10vh;
 }
@@ -19,7 +19,7 @@
 }
 
 .nav-links{
-    margin-left: 40vh;
+    margin-left: 25vh;
 }
 
 .nav-links a{
@@ -30,11 +30,6 @@
     cursor: pointer;
 }
 
-.register-links img{
-    height: 80vh;
-    margin-right: -45vh;
-    margin-top: -10vh;
-}
 
 .register-links button{
     padding-right: 18px;
@@ -60,4 +55,220 @@
     background-color: #f261b4;
     border: none;
     cursor: pointer;
+    z-index: 2;
+}
+
+.bg-image img{
+    position: absolute;
+    right: 0;
+    height: 80vh;
+    margin-top: -13.5vh;
+    z-index: -1;
+
+}
+
+.side-image img{
+    padding-top: 38px;
+    height: 26vh;
+    position: absolute;
+    left: 0;
+}
+
+.body-text{
+    margin-top: 31vh;
+    padding-left: 10vh;
+}
+
+.body-text h3{
+    font-size: 23px;
+    color: #f261b4;    
+}
+
+.body-text h1{
+    font-size: 47px;
+    font-family: 'Open Sans', sans-serif;
+
+}
+
+.body-text p{
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.85;
+}
+
+.search-link input{
+    margin-top: 180px;
+    margin-left: 6vh;
+    border: white;
+    padding-right: 37vh;
+    font-size: 13px;
+}
+
+.search-link input:focus {
+    outline-style: none;
+    box-shadow: none;
+    border-color: transparent;
+  }
+
+.search{
+  background-color: #f261b4;  
+  color: white;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  cursor: pointer;
+}
+
+.job-cate{
+    background-color: rgb(231, 230, 230);
+    height: 55vh;
+}
+
+.jobs h1{
+    margin-top: 19vh;
+    margin-left: 10vh;
+}
+
+.job-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 5vh;
+}
+
+.job-card1{
+    margin: 2vh;
+    background-color: white;
+    height: 36vh;
+    width: 20vw;
+}
+
+.job-card1  h6{
+    padding-top: 19.5vh;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(145, 145, 145);
+}
+
+.job-card1 p{
+    text-align: center;
+    padding-top: 16px;
+    color: rgb(139, 138, 138);
+}
+
+.job-card2{
+    margin: 2vh;
+    background-color: white;
+    width: 20vw;
+}
+
+.job-card2  h6{
+    padding-top: 19.5vh;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(145, 145, 145);
+}
+
+.job-card2 p{
+    text-align: center;
+    padding-top: 16px;
+    color: rgb(139, 138, 138);
+}
+
+.job-card3{
+    margin: 2vh;
+    background-color: white;
+    width: 20vw;
+}
+
+.job-card3 h6{
+    padding-top: 19.5vh;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(145, 145, 145);
+}
+
+.job-card3 p{
+    text-align: center;
+    padding-top: 16px;
+    color: rgb(139, 138, 138);
+}
+
+.job-category h1{
+    margin-top: 19vh;
+    margin-left: 10vh;
+}
+
+.word-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 0;
+    padding-top: 20vh;
+}
+
+.body-image img{
+    height: 45vh;
+    width: 65vh;
+    padding-left: 24vh;
+}
+
+.body-word{
+    padding-right: 15vh;
+}
+
+.body-word h1{
+    font-size: 35px;
+    padding-bottom: 5vh;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.body-word p{
+    line-height: 2;
+    font-size: 17px;
+}
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20vh;
+    margin-bottom: 20vh;
+}
+
+.footer-logo {
+    padding-left: 30vh;
+}
+
+.social-h{
+    margin-left: -7vh;
+}
+
+.social-h a i{
+    color: black;
+    font-size: 25px;
+    margin: 2vh;
+    padding-top: 6vh;
+}
+
+.list-nav ul li {
+    list-style: none;
+    font-size: 19px;
+    line-height: 1.8;
+}
+
+.list-careers ul li {
+    list-style: none;
+    font-size: 19px;
+    line-height: 1.8;
+}
+
+.sign-in{
+    padding-right: 30vh;
+}
+
+.sign-in ul li {
+    list-style: none;
+    font-size: 19px;
+    line-height: 1.8;
 }
