all pages included

--- a/style-register.css
+++ b/style-register.css
@@ -50,6 +50,9 @@ body{
   background-color: #212121;
   color: #fff;
 }
+.input-dark a{
+  color: #fff;
+}
 a{
   color: #212121;
   text-decoration: none;
